# wifi-webview-debugger

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wifi_webview_debugger/: __init__.py  cli.py  probe.py  proxy.py
